Bug 1130681. Part 2: Backout bug 1118876 for android reftest failures. r=jrmuizel