gfx/layers/client/TiledContentClient.h
@@ -274,8 +274,6 @@ struct TileClient
   nsIntRegion mInvalidBack;
   nsExpirationState mExpirationState;
 
-  gfx::IntPoint mOrigin;
-
 private:
   // Copies dirty pixels from the front buffer into the back buffer,
   // and records the copied region in aAddPaintedRegion.
